k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metaData:
  name: noderag-route
spec:
  to:
    kind: Service
    name: noderag-service
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPoicy: Redirect
